# qml

./: .clang-format  .gitignore  CMakeLists.txt  README.md
models/: ApplicationModel.hpp  ToDoItem.cpp  ToDoItem.hpp  ToDoItems.cpp  ToDoItems.hpp
qml/: MainWindow.qml
src/: MainApp.cpp  MainApp.hpp  Storage.hpp  main.cpp
